<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
        android:layout_width="70dp"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/tv_nim"
        app:layout_constraintStart_toEndOf="@id/iv_foto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/nim"
        android:layout_marginStart="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_nama"
        app:layout_constraintStart_toEndOf="@id/iv_foto"
        app:layout_constraintTop_toBottomOf="@id/tv_nim"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/nama_lengkap"
        android:layout_marginStart="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_prodi"
        app:layout_constraintStart_toEndOf="@id/iv_foto"
        app:layout_constraintTop_toBottomOf="@id/tv_nama"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/program_studi"
        android:layout_marginStart="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>